// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsFailedInstanceSection does not render when no results are failing 1`] = `null`;

exports[`TabStopsFailedInstanceSection does renders when no results are failing and set to alwaysRenderSection 1`] = `
<div
  className="tabStopsFailureInstanceSection"
  data-automation-id="tab-stops-failure-instance-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      badgeCount={0}
      outcomeType="fail"
      title="Failed instances"
      titleSize="title"
    />
  </HeadingElementForLevel>
  <TabStopsRequirementsWithInstances
    deps={Object {}}
    getCollapsibleComponentPropsWithInstance={[Function]}
    headingLevel={3}
    results={Array []}
  />
</div>
`;

exports[`TabStopsFailedInstanceSection renders with failing results 1`] = `
<div
  className="tabStopsFailureInstanceSection"
  data-automation-id="tab-stops-failure-instance-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      badgeCount={10}
      outcomeType="fail"
      title="Failed instances"
      titleSize="title"
    />
  </HeadingElementForLevel>
  <TabStopsRequirementsWithInstances
    deps={Object {}}
    getCollapsibleComponentPropsWithInstance={[Function]}
    headingLevel={3}
    results={
      Array [
        Object {
          "description": "All interactive elements can be reached using the Tab and arrow keys. (Partially automated)",
          "id": "keyboard-navigation",
          "instances": Array [
            Object {
              "description": "test desc 1",
              "id": "test-id-1",
            },
          ],
          "isExpanded": false,
          "name": "Keyboard navigation",
        },
        Object {
          "description": "There are no interactive elements that “trap” input focus and prevent navigating away. (Partially automated)",
          "id": "keyboard-traps",
          "instances": Array [
            Object {
              "description": "test desc 2",
              "id": "test-id-2",
            },
          ],
          "isExpanded": false,
          "name": "Keyboard traps",
        },
      ]
    }
  />
</div>
`;
